SERVER-104593 Avoid undercounting when reading memory usage from AllocatorStats (#35680)

GitOrigin-RevId: cef53bd77c4d2117da59d9a8d117afa895ada166